openshift/kie-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ks
  labels:
    app: ks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ks
  template:
    metadata:
      labels:
        app: ks
        cluster: jgrp.k8s.dm-kieserver
    spec:
      serviceAccount: rhdm-svc-ac
      containers:
        - name: ks
          image: quay.io/jonkey/rhdm-kieserver-rhel8:7.11.1-3.1638383122
          resources:
            limits:
              cpu: '1'
              memory: 2Gi
            requests:
              cpu: 750m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /services/rest/server/readycheck
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 36
          livenessProbe:
            httpGet:
              path: /services/rest/server/healthcheck
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 2
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: jolokia
              containerPort: 8778
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: ks
  labels:
    app: ks
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: ks
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ks
  labels:
    app: ks
spec:
  to:
    kind: Service
    name: ks
  port:
    targetPort: 8080
